# personal-website

./: .gitignore  .prettierrc  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy-backend.yml
backend/: Cargo.toml
backend/src/: error.rs  main.rs  state.rs
backend/src/controllers/: health.rs  mod.rs  redis.rs  token.rs
backend/src/middlewares/: mod.rs  token.rs  tracing.rs
backend/src/services/: redis.rs  token.rs
backend/src/services/token/: challenge.rs  mod.rs
deploy/: backend.service  redis-server.service
frontend/: .prettierrc  CODEOWNERS  astro.config.mjs  env.d.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
frontend/src/components/: CliSpinner.tsx  EnviousEditor.tsx  Link.astro  RedisTerminal.tsx  TableOfContents.astro
frontend/src/layouts/: EmptyLayout.astro
frontend/src/pages/: index.astro
frontend/src/server/: abuse.ts  client.ts  middleware.ts  ratelimit.ts  session.ts  tokenCache.ts
frontend/src/styles/: global.css
frontend/src/types/: redis.ts  token.ts
frontend/src/utils/: api.ts  blog.ts  date.ts  projects.ts  shiki.ts
src/: content.config.ts
src/components/: BlogEntry.astro  ClickableLink.astro  EnviousEditor.tsx  HorizontalDivider.astro  InteractiveProject.astro  InterestPill.astro  Link.astro  MobileNav.astro  MobileNavigation.tsx  RedisTerminal.tsx  Welcome.astro
src/layouts/: AppLayout.astro  Layout.astro  PrimaryLayout.astro
src/pages/: 404.astro  index.astro
src/styles/: global.css  post.css
src/utils/: shiki.ts
(+20 files in other folders)
