[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
resp3 = { git = "https://github.com/Hacker-007/codecrafters-redis", branch = "rewrite" }

axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-routing"] }
clap = { version = "4.5.59", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
